# Ecole-42

./: .gitmodules  ft_atoi.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_strchr.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_tolower.c  ft_toupper.c
New_gnl/: CMakeLists.txt  get_next_line.c  get_next_line.h  get_next_line_utils.c
ft_printf/libft/: ft_bzero.c  ft_isascii.c  ft_isdigit.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strjoin.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  (+2 more)
get_next_line/: CMakeLists.txt  get_next_line.c  get_next_line.h  get_next_line_utils.c  text.txt
gnlbonus/: CMakeLists.txt  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c  karmine.txt  test2.txt  test3.txt
libft/: Makefile  a.out  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_joincopy.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstnew_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h  libft.h.gch
printf/: CMakeLists.txt  Makefile  ft_format.c  ft_itoa.c  ft_managementchar.c  ft_printHex.c  ft_printchar.c  ft_printf.c  ft_printnbr.c  ft_printpercent.c  ft_printptr.c  ft_printstring.c  ft_printunsnbr.c  libftprintf.h
printf/libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strrchr.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
test/: CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
